# actix-mongodb-example

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
src/: common.rs  db.rs  logging.rs  main.rs
src/resource/: controller.rs  mod.rs  service.rs
