[package]
name = "actix-mongodb-example"
version = "0.1.0"
authors = ["Jonathan Braat <jonathan@jbraat.dev>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.0"
env_logger = "0.7.1"
chrono = "0.4.9"

actix-web = "2"
actix-rt = "2"

bson = "0.14.1"
mongodb = "0.9.2"

lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
